--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,44 +1,36 @@
-name: Deploy to GitHub-Pages
+name: Deploy to GitHub Pages
 
 on:
   push:
-    branches:
-      - master
+    branches: [ master ]
 
 jobs:
   deploy:
-    name: Deploy
-
+    runs-on: ubuntu-latest
     permissions:
       contents: write
 
-    runs-on: ubuntu-latest
-
     steps:
-
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version-file: 'package.json'
 
-      - name: Restore cache
+      - name: Cache dependencies
         uses: actions/cache@v3
         with:
           path: ~/.npm
-          key: cache-npm-${{ hashFiles('./package-lock.json') }}
-          restore-keys: cache-npm-
+          key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: ${{ runner.os }}-npm-
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build project
-        run: npm run build
+      - run: npm ci
+      - run: npm run build
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: ./build
           branch: gh-pages
+          token: ${{ secrets.GITHUB_TOKEN }}
