--- a/.github/workflows/gh-pages-on-pr.yml
+++ b/.github/workflows/gh-pages-on-pr.yml
@@ -1,9 +1,8 @@
 name: Deploy on pull request
 
 on:
-  pull_request_target:
-    branches:
-      - '*'
+  pull_request:
+    branches: [ '*' ]
 
 jobs:
   deploy-on-pull-request:
